data/all_generated_tests/raw_wast_tests/block_IncorrectBranchTargetResolution_1826.wast
;; 7. **Test Description**: Set up a `br_table` inside a block with mismatched label entries due to incorrect indexing in wizard_engine, causing branches to incorrect blocks.    - **Constraint**: Ensure each entry in the `br_table` corresponds to its correct target block.    - **Relation**: Ensures table-based branching resolves all label entries accurately.

(assert_invalid
  (module
    (func $br_table-mismatch (result i32)
      (block (result i32)
        (block (result i32)
          (br_table 1 0 (i32.const 0))
        )
        (i32.const 1)
      )
    )
  )
  "type mismatch"
)